--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
+    "playwright>=1.58.0",
+    "playwright-stealth>=2.0.1",
     "pydantic>=2.12.5",
 ]
 license = {text = "MIT"}
