--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,22 @@
 annotated-types==0.7.0
+coverage==7.13.4
 dotenv==0.9.9
+greenlet==3.3.1
+iniconfig==2.3.0
+packaging==26.0
+playwright==1.58.0
+playwright-stealth==2.0.1
+pluggy==1.6.0
+py==1.11.0
 pydantic==2.12.5
 pydantic-core==2.41.5
+pyee==13.0.0
+pygments==2.19.2
+pytest==9.0.2
+pytest-check==2.6.2
+pytest-cov==7.0.0
+pytest-html==3.2.0
+pytest-metadata==3.1.1
 python-dotenv==1.2.1
 typing-extensions==4.15.0
 typing-inspection==0.4.2
